# csnack

./: CMakeLists.txt  README.md  TODO.md
example/: comdisint.cpp
include/snack/: ast.h  error.def  error.h  ir_compiler.h  ir_decompiler.h  ir_interpreter.h  ir_opcode.def  ir_opcode.h  lexer.h  parser.h  token.h  unit.h  unit_manager.h
include/snack/unit/: deep.h  init.h  std.h
specs/: BINARY.md  CDESIGN.md  LDESIGN.md  OPCODE.md
src/: ast.cpp  error.cpp  ir_compiler.cpp  ir_decompiler.cpp  ir_interpreter.cpp  ir_opcode.cpp  lexer.cpp  parser.cpp  token.cpp  unit.cpp  unit_manager.cpp
src/unit/: init.cpp  std.cpp
